Fixed some spacing issues and changed the images to PNGs

--- a/src/App.css
+++ b/src/App.css
@@ -286,7 +286,7 @@ img {
   background-image: url(./assets/icons/dotted-pattern.svg);
   background-position: 0% 100%;
   background-repeat: no-repeat;
-  padding: 5rem var(--side-padding) 5.5rem;
+  padding: var(--section-padding);
 }
 .completed-work-section h2 {
   text-align: center;
@@ -373,7 +373,7 @@ img {
 
 /* Testimonials section */
 .testimonials-section {
-  padding: 5.5rem var(--side-padding);
+  padding: var(--section-padding);
   background-color: #ffffff;
   background-image: url(./assets/icons/dotted-pattern.svg);
   background-position: 0% 0%;
@@ -419,7 +419,7 @@ img {
 
 /* Blog section */
 .blog-section {
-  padding: 5.5rem var(--side-padding);
+  padding: var(--section-padding);
   background-color: #f8f8f8;
   background-image: url(./assets/icons/dotted-pattern.svg);
   background-position: 100% 100%;
@@ -463,7 +463,7 @@ img {
     url(./assets/icons/dotted-pattern.svg);
   background-position: 100% 0%, 0% 100%;
   background-repeat: no-repeat;
-  padding: 5.5rem var(--side-padding);
+  padding: var(--section-padding);
   text-align: center;
 }
 .newsletter-text-container {
@@ -505,7 +505,7 @@ img {
 
 /* Footer section */
 .footer-section {
-  padding: 5.5rem var(--side-padding) 0;
+  padding: 6rem var(--side-padding) 0;
   background-color: #f8f8f8;
   background-image: url(./assets/icons/dotted-pattern.svg);
   background-position: 0% 0%;
@@ -551,7 +551,7 @@ img {
   background-color: #37806b;
 }
 .footer-copyright-section {
-  padding: 5.5rem 0 0;
+  padding: 4.5rem 0 0;
   font-size: 0.875rem;
   text-align: center;
 }
@@ -581,6 +581,8 @@ img {
   }
   .single-card-container {
     flex: 0 0 100%;
+  }
+  .single-card-container:not(:last-of-type) {
     margin-bottom: 3rem;
   }
   .about-us-section-img-container {
@@ -666,6 +668,8 @@ img {
   .testimonial-card-container {
     flex: 0 0 100%;
     padding: 3.5rem 1rem;
+  }
+  .testimonial-card-container:not(:last-of-type) {
     margin-bottom: 3rem;
   }
   .testimonial-card img {
@@ -678,6 +682,8 @@ img {
   }
   .blog-card-container {
     flex: 0 0 100%;
+  }
+  .blog-card-container:not(:last-of-type) {
     margin-bottom: 5rem;
   }
   .newsletter-section input {
@@ -710,6 +716,9 @@ img {
     flex: 0 0 80%;
     margin: 0 auto 3rem;
   }
+  .single-card-container:last-of-type {
+    margin-bottom: 0;
+  }
   .about-us-section-img-container {
     flex: 0 0 80%;
     margin: 0 auto 0 0;
@@ -737,6 +746,9 @@ img {
     padding: 3rem 1rem;
     margin: 0 auto 3rem;
   }
+  .testimonial-card-container:last-of-type {
+    margin-bottom: 0;
+  }
   .testimonial-card img {
     padding-right: 0;
     margin: -30% auto 1rem;
@@ -744,6 +756,9 @@ img {
   .blog-card-container {
     flex: 0 0 80%;
     margin: 0 auto 5rem 0;
+  }
+  .blog-card-container:last-of-type {
+    margin-bottom: 0;
   }
   .newsletter-section button {
     padding: 1rem 2.5rem;
@@ -778,11 +793,24 @@ img {
   }
 }
 
+@media (min-width: 768px) and (max-width: 992px) {
+  .single-card-container {
+    flex: 0 0 50%;
+    margin: 0 auto 3rem;
+  }
+  .single-card-container:last-of-type {
+    margin-bottom: 0;
+  }
+}
+
 @media (min-width: 992px) and (max-width: 1024px) {
   .testimonial-card-container {
     flex: 0 0 70%;
     padding: 3rem 1rem;
     margin: 0 auto 3rem;
+  }
+  .testimonial-card-container:last-of-type {
+    margin-bottom: 0;
   }
 }
 
